# WeatherGetter

./: LICENSE.txt  MacOS-script.sh  RD.md  README.md  README.md.old  WeatherGetter.cabal  Windows-Installation.md  Windows-script.bat
app/: Main.hs  WeatherTypes.hs
src/weather/: MAIN.java
