cabal-version:      2.4
name:               WeatherGetter
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/ToiletCoders/WeatherGetter

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Fabian
maintainer:         fabianlippold1184@gmail.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

executable WeatherGetter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: WeatherTypes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
        aeson,
        lens,
        wreq,
        containers,
        bytestring,
        directory,
    hs-source-dirs:   app
    default-language: Haskell2010
